KNN AND LOGISTIC REGRESSION DONE

--- a/LOGISTIC REGRESSION/LOGISTIC REGRESSION.ipynb
+++ b/LOGISTIC REGRESSION/LOGISTIC REGRESSION.ipynb
@@ -2,8 +2,483 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "967d913b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#EQUATION FOR LOGISTIC REGRESSION\n",
+    "#Odds=pi/(1-pi)\n",
+    "#WHERE pi=e^y\n",
+    "#WHERE y=mx+c\n",
+    "#AND LOG OF Odds gives y=mx+c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "286d6c45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#IMPORT LIBRARIES\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2e91cff5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#IMPORT DATASET\n",
+    "from sklearn.datasets import load_iris"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8b3b48bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MAKE DATASET OBJECT/VARIABLE\n",
+    "iris_dataset=load_iris()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "54a62281",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sklearn.utils.Bunch"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#CHECK DATASET TYPE\n",
+    "type(iris_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "56336ee7",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".. _iris_dataset:\n",
+      "\n",
+      "Iris plants dataset\n",
+      "--------------------\n",
+      "\n",
+      "**Data Set Characteristics:**\n",
+      "\n",
+      "    :Number of Instances: 150 (50 in each of three classes)\n",
+      "    :Number of Attributes: 4 numeric, predictive attributes and the class\n",
+      "    :Attribute Information:\n",
+      "        - sepal length in cm\n",
+      "        - sepal width in cm\n",
+      "        - petal length in cm\n",
+      "        - petal width in cm\n",
+      "        - class:\n",
+      "                - Iris-Setosa\n",
+      "                - Iris-Versicolour\n",
+      "                - Iris-Virginica\n",
+      "                \n",
+      "    :Summary Statistics:\n",
+      "\n",
+      "    ============== ==== ==== ======= ===== ====================\n",
+      "                    Min  Max   Mean    SD   Class Correlation\n",
+      "    ============== ==== ==== ======= ===== ====================\n",
+      "    sepal length:   4.3  7.9   5.84   0.83    0.7826\n",
+      "    sepal width:    2.0  4.4   3.05   0.43   -0.4194\n",
+      "    petal length:   1.0  6.9   3.76   1.76    0.9490  (high!)\n",
+      "    petal width:    0.1  2.5   1.20   0.76    0.9565  (high!)\n",
+      "    ============== ==== ==== ======= ===== ====================\n",
+      "\n",
+      "    :Missing Attribute Values: None\n",
+      "    :Class Distribution: 33.3% for each of 3 classes.\n",
+      "    :Creator: R.A. Fisher\n",
+      "    :Donor: Michael Marshall (MARSHALL%PLU@io.arc.nasa.gov)\n",
+      "    :Date: July, 1988\n",
+      "\n",
+      "The famous Iris database, first used by Sir R.A. Fisher. The dataset is taken\n",
+      "from Fisher's paper. Note that it's the same as in R, but not as in the UCI\n",
+      "Machine Learning Repository, which has two wrong data points.\n",
+      "\n",
+      "This is perhaps the best known database to be found in the\n",
+      "pattern recognition literature.  Fisher's paper is a classic in the field and\n",
+      "is referenced frequently to this day.  (See Duda & Hart, for example.)  The\n",
+      "data set contains 3 classes of 50 instances each, where each class refers to a\n",
+      "type of iris plant.  One class is linearly separable from the other 2; the\n",
+      "latter are NOT linearly separable from each other.\n",
+      "\n",
+      ".. topic:: References\n",
+      "\n",
+      "   - Fisher, R.A. \"The use of multiple measurements in taxonomic problems\"\n",
+      "     Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to\n",
+      "     Mathematical Statistics\" (John Wiley, NY, 1950).\n",
+      "   - Duda, R.O., & Hart, P.E. (1973) Pattern Classification and Scene Analysis.\n",
+      "     (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.\n",
+      "   - Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System\n",
+      "     Structure and Classification Rule for Recognition in Partially Exposed\n",
+      "     Environments\".  IEEE Transactions on Pattern Analysis and Machine\n",
+      "     Intelligence, Vol. PAMI-2, No. 1, 67-71.\n",
+      "   - Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions\n",
+      "     on Information Theory, May 1972, 431-433.\n",
+      "   - See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II\n",
+      "     conceptual clustering system finds 3 classes in the data.\n",
+      "   - Many, many more ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "#VIEW THE DATASET INFO USING DESCR\n",
+    "#print(iris_dataset['DESCR'])\n",
+    "print(iris_dataset.DESCR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "67cdc1e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#VIEW FEATURES OF DATASET\n",
+    "print(iris_dataset.feature_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "769f5e59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#VIEW DATASET TARGET/RESPONSE\n",
+    "print(iris_dataset.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4052d009",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(150, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#VIEW SHAPE OF DATASET\n",
+    "#IN THIS DATA THERE ARE 150 ROW ENTRIES AND 4 COLUMNS\n",
+    "print(iris_dataset.data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d42aa1b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ASSIGN FEATURES'OBSERVATIONS TO X AXIS\n",
+    "x_features=iris_dataset.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "fc2dedd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ASSIGN RESPONSES/TARGETS TO Y AXIS\n",
+    "y_targets=iris_dataset.target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8c0dbb53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(150, 4)\n",
+      "(150,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CHECK SHAPES OF x_features and y_targets\n",
+    "print(x_features.shape)\n",
+    "print(y_targets.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e3b9739f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#IMPORT KNN METHOD FROM SKLEARN\n",
+    "from sklearn.neighbors import KNeighborsClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "fd39d6ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CREATE ESTIMATOR VARIABLE/OBJECT\n",
+    "#n_neighbors= tells how many nearest neighbours to look for\n",
+    "knn=KNeighborsClassifier(n_neighbors=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b66c232d",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNeighborsClassifier(n_neighbors=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#VIEW KNN PROPERTIES\n",
+    "print(knn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "98dc47c1",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(n_neighbors=1)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#FIT X AND Y DATE INTO ESTIMATOR\n",
+    "knn.fit(x_features,y_targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "35f398a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CREATE NEW OBJECT WITH VALUES FOR PREDICTION\n",
+    "x_new=[[3,5,4,1] , [5,4,3,2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a6ba5199",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#PREDICT OUTCOME USING KNN\n",
+    "knn.predict(x_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ad9ab6fa",
+   "id": "a0bd1ea2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c56b5a7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bfe23a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cd0641f",
+   "metadata": {},
+   "source": [
+    "#LETS TRY SAME WITH LOGISTIC REGRESSION MODEL\n",
+    "#NOTE ITS LOGISTIC NOT LINEAR REGRESSION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "d36ecf6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#IMPORT LOGISTIC REGRESSION MODEL\n",
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "439a369b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CREATE ESTIMATOR VARIABLE FOR LOGREG MODEL\n",
+    "logreg=LogisticRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "184a5add",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ishan\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#FIT X AND Y DATE INTO ESTIMATOR\n",
+    "logreg.fit(x_features,y_targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a89654c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#PREDICT OUTCOME USING LOGREG\n",
+    "logreg.predict(x_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a40e1f9",
    "metadata": {},
    "outputs": [],
    "source": []
